--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
+
+
 
 ul {
     list-style: none;
@@ -9,16 +13,62 @@ ul {
 
 .wrapper {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 5fr;
 }
 
 /* =============SIDEBAR=============== */
 .sidebar {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: 100px;
     grid-column-start: 1;
     grid-column-end: 2;
-    background-color: aquamarine;
+    background-color: #0369a1;
+    padding-left: 1rem;
+}
+
+.top-sidebar {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    justify-content: flex-end;
+    padding: 0 10px;
+    margin-top: 1rem;
+}
+
+.title-logo {
+    color: #e0f2fe;
+
+}
+
+.title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 800;
+    font-size: 1.7rem;
+    color: #e0f2fe;
+}
+
+.mid-sidebar {
+    display: grid;
+    grid-template-rows: repeat(6, 50px);
+}
+
+.sidebar-options {
+    display: grid;
+    grid-template-columns: 10px 100px;
+    gap: 10%;
+    color: #e0f2fe;
+}
+
+.sidebar-options-title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+}
+
+.bottom-sidebar {
+    align-self: end;
+    display: grid;
+    grid-template-rows: 2rem 2rem 2rem;
+    gap: 10px;
+    margin-bottom: 1rem;
 }
 
 /* ===============MAIN================ */
@@ -27,6 +77,7 @@ ul {
     grid-template-rows: 1fr 4fr;
     grid-column-start: 2;
     grid-column-end: 3;
+    height: 100vh;
 }
 
 /* HEADER */
@@ -34,7 +85,7 @@ ul {
     display: grid;
     grid-row: 1 / 2;
     grid-template-rows: 1fr 1fr;
-    background-color: aliceblue;
+    background-color: #f0f9ff;
 }
 
 .top-header {
@@ -71,4 +122,20 @@ ul {
     grid-row: 2 / 3;
     grid-template-columns: 3fr 1fr;
     background-color: rgb(146, 146, 110);
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 15px;
+}
+
+.card {
+    border: 1px solid grey;
+    width: clamp(150px, 15%, 300px);
+}
+
+.project-aside {
+    display: grid;
 }
