--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;800&display=swap');
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-
-
 
 ul {
     list-style: none;
@@ -14,22 +13,23 @@ ul {
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 5fr;
+    height: 100vh;
 }
 
 /* =============SIDEBAR=============== */
 .sidebar {
     display: grid;
-    grid-template-rows: 100px;
+    grid-template-rows: 1fr 3fr 4fr;
     grid-column-start: 1;
     grid-column-end: 2;
     background-color: #0369a1;
     padding-left: 1rem;
+    box-shadow: 100px 0px 5px black;
 }
 
 .top-sidebar {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    justify-content: flex-end;
     padding: 0 10px;
     margin-top: 1rem;
 }
@@ -64,7 +64,6 @@ ul {
 }
 
 .bottom-sidebar {
-    align-self: end;
     display: grid;
     grid-template-rows: 2rem 2rem 2rem;
     gap: 10px;
@@ -74,30 +73,63 @@ ul {
 /* ===============MAIN================ */
 .main-content {
     display: grid;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 0.25fr 2fr;
     grid-column-start: 2;
     grid-column-end: 3;
-    height: 100vh;
 }
 
 /* HEADER */
 .header {
     display: grid;
-    grid-row: 1 / 2;
-    grid-template-rows: 1fr 1fr;
+    height: ;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
     background-color: #f0f9ff;
 }
+
 
 .top-header {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    padding: 1rem;
+}
+
+.top-left-header {
+    display: grid;
+    grid-template-columns: 30px 1fr;
+}
+
+
+.search {
+    font-family: 'Poppins', sans-serif;
+    background-color: #d6d3d1;
+    border: none;
+    border-radius: 1rem;
+    width: 80%;
+    height: 30px;
+    padding-left: 20px;
+}
+
+
+
+.top-right-header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.username {
+    font-family: 'Poppins', sans-serif;
 }
 
 .mid-header {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-column: 1 / 3;
     grid-row: 2 / 3;
+    font-family: 'Poppins', sans-serif;
+    padding: 1rem;
 }
 
 .left-mid-header {
@@ -107,7 +139,11 @@ ul {
 
 .header-username {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+
+.right-mid-header {
+    display: grid;
 }
 
 .right-mid-header ul {
@@ -116,26 +152,79 @@ ul {
     list-style: none;
 }
 
+.header-button {
+    width: 6rem;
+    height: 2.5rem;
+    border: none;
+    border-radius: 1rem;
+    background-color: #0284c7;
+    color: #e0f2fe;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    box-shadow: 1px 1px 2px #544c5e;
+}
+
+.search,
+.header-button:hover {
+    box-shadow: 1px 1px 5px black;
+}
+
 /* =============PROJECT DASHBOARD========== */
 .project-container {
     display: grid;
-    grid-row: 2 / 3;
     grid-template-columns: 3fr 1fr;
-    background-color: rgb(146, 146, 110);
+    background-color: #e0e7ff;
+    padding: 2rem 2rem 4rem 1rem;
+    border: 1px solid blue;
+    gap: 0 20px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .projects {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 15px;
+    height: 50%;
 }
 
 .card {
-    border: 1px solid grey;
-    width: clamp(150px, 15%, 300px);
+    box-shadow: 1px 1px 5px rgba(10, 10, 10, 0.3);
+    padding: 1rem;
+    border-radius: 1rem;
+    width: 100%;
+    height: 100%;
+    background-color: #f0f9ff;
 }
 
 .project-aside {
     display: grid;
+}
+
+.announcements {
+    display: grid;
+    grid-template-rows: 1fr 4fr;
+    font-family: 'Poppins', sans-serif;
+}
+
+.announcements ul {
+    padding: 10px;
+    display: grid;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 5px rgba(10, 10, 10, 0.3);
+    background-color: #f0f9ff;
+}
+
+.trending {
+    display: grid;
+    grid-template-rows: 1fr 4fr;
+    font-family: 'Poppins', sans-serif;
+}
+
+.trending ul {
+    display: grid;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 5px rgba(10, 10, 10, 0.3);
+    background-color: #f0f9ff;
+    padding: 20px;
 }
