box-shadow cards added

--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,10 @@ ul {
     background-color: #f0f9ff;
 }
 
+.card:hover {
+    box-shadow: 1px 1px 4px black;
+}
+
 .project-aside {
     display: grid;
 }
